--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "webpack": "^1.13.3"
   },
   "devDependencies": {
-    "jscs": "^3.0.7"
+    "jscs": "^3.0.7",
+    "webpack": "^1.13.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
