--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "description": "bienna. short for \"black and white\" (for pronunciation b-and-wa.)",
   "main": "bienna.js",
   "dependencies": {
+    "css-loader": "^0.25.0",
+    "node-sass": "^3.10.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.6",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "jscs": "^3.0.7",
     "webpack": "^1.13.3"
   },
