--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "bienna.js",
   "dependencies": {
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.10.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
